# picix

./: .gitignore  CMakeLists.txt  build.sh
src/: main.c
